--- a/api/default_settings.toml
+++ b/api/default_settings.toml
@@ -1,8 +1,14 @@
 [default]
-marketplace_project = '@none None' # This should be set to the name of the project you want to use, otherwise an error will be thrown.
-auto_approve_entitlements = false  # This should be set to true if you want to auto-approve entitlements.
-event_topic = '@none None'         # Optional. The name of the topic to publish events to.
-slack_webhook = '@none None'       # Optional. The webhook URL to send Slack messages to.
-audience = 'api.dns_zone_name'
+marketplace_project = '@none None'  # This should be set to the name of the project you want to use, otherwise an error will be thrown.
+auto_approve_entitlements = false   # This should be set to true if you want to auto-approve entitlements.
+event_topic = '@none None'          # Optional. The name of the topic to publish events to.
+slack_webhook = '@none None'        # Optional. The webhook URL to send Slack messages to.
+audience = 'api.dns_zone_name'      # This should be set to match the configured DNS name
+
+# Optional. Email settings
+email_host = '@none None'           # Optional. The host to send email messages to.
+email_port = '@none None'           # Optional. The port used to send email messages.
+email_sender = '@none None'         # Optional. The email from address.
+email_recipients = '@none None'     # Optional. The email recipeint addresses.
 
 [global] # global will override everything
