--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,13 +1,15 @@
-Flask==2.0.2
-gunicorn==20.1.0
-google-cloud-pubsub==2.18.0
-pg8000==1.24.0
+Flask==3.1.0
+gunicorn==23.0.0
+google-cloud-pubsub==2.28.0
+pg8000==1.31.2
 structlog==21.5.0
-requests==2.31.0
-google-api-python-client==2.94.0
+requests==2.32.3
+google-api-python-client==2.163.0
 ratelimit==2.2.1
 backoff==2.1.2
-dynaconf==3.1.9
-pyjwt[crypto]==2.3.0
-Werkzeug==2.0.3
+dynaconf==3.2.10
+pyjwt[crypto]==2.10.1
+Werkzeug==3.1.3
 Flask-Redmail==0.3.0
+google-auth-httplib2==0.2.0
+httplib2==0.22.0
