--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -13,3 +13,5 @@ Werkzeug==2.0.3
 Flask-Redmail==0.3.0
 google-auth-httplib2==0.2.0
 httplib2==0.22.0
+google-auth==2.38.0
+google-cloud-storage=3.1.0
