--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,4 +14,4 @@ Flask-Redmail==0.3.0
 google-auth-httplib2==0.2.0
 httplib2==0.22.0
 google-auth==2.38.0
-google-cloud-storage=3.1.0
+google-cloud-storage==3.1.0
