--- a/terraform/custom-settings.toml
+++ b/terraform/custom-settings.toml
@@ -3,7 +3,7 @@ marketplace_project = 'wandisco-public-384719' # This should be set to the name 
 auto_approve_entitlements = false  # This should be set to true if you want to auto-approve entitlements.
 event_topic = 'projects/cloudcommerceproc-prod/topics/wandisco-public-384719' # Optional. The name of the topic to publish events to.
 slack_webhook = '@none None'       # Optional. The webhook URL to send Slack messages to.
-Audience = 'cirata-doit-managed-zone'     # This should be set to match the configured DNS name
+audience = 'cirata-doit-managed-zone'     # This should be set to match the configured DNS name
 sendgrid_api_key = 'xxxxxxxxxxxxxxxxxxxxxxxx' # Found in Bitwarden sendgrid admin user
 sendgrid_from_email = 'usaccounts@wandisco.com'
 
